# audiothek-quickplay

./: Cargo.toml  LICENSE  README.md  build.rs  podcasts.json
.github/workflows/: release.yml
src/: main.rs
