[package]
name = "audiothek_quickplay"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rodio = { version = "0.18", features = ["mp3"] }
anyhow = "1.0"
urlencoding = "2.1"
dialoguer = "0.11"
crossterm = "0.27"
